--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-end">
                     <ul class="navbar-nav" style="padding: 5px 10px 10px 0;">
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/index">Dashboard</a>
+                            <a class="nav-link text-light" asp-area="" asp-page="/index">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-page="/disaster/index">Disaster</a>
