Some parts of info board backend

--- a/Pages/Disaster/Profile/entrylog/Index.cshtml
+++ b/Pages/Disaster/Profile/entrylog/Index.cshtml
@@ -271,7 +271,7 @@
 				{ "orderable": false, "targets": [0, 4, 5] } // Non-sortable columns
 			],
 			// Set initial sorting by the Check-in Date
-			order: [[2, 'desc'], [3, 'asc'], [1, 'asc']]
+			order: [[2, 'desc'], [1, 'asc']]
 		});
 
 		// Adding filters to specific columns
