Modified entry log table

--- a/Pages/Disaster/Profile/entrylog/Index.cshtml
+++ b/Pages/Disaster/Profile/entrylog/Index.cshtml
@@ -128,7 +128,7 @@
 					<div class="col-lg-12">
 						<table id="entrylog-table" class="table display compact order-column table-hover" cellspacing="0" width="100%">
 							<thead>
-								<tr >
+								<tr>
 									<th>
 										<div class="form-check">
 											<input class="form-check-input" type="checkbox" id="selectAllCheckboxes">
@@ -154,8 +154,8 @@
 												<label class="form-check-label"></label>
 											</div>
 										</td>
-										<td width="20%">@item.fullName</td>
-										<td width="15%" style="text-align: center;">@item.remarks</td>
+										<td width="30%">@item.fullName</td>
+										<td width="15%">@item.remarks</td>
 										<td width="20%" style="text-align: center;">@item.checkInDate</td>
 										<td width="20%" style="text-align: center;">@item.checkOutDate</td>
 										<td width="15%" style="text-align: center;">
@@ -168,7 +168,7 @@
 												<span class="badge rounded-pill bg-light">@item.entryStatus</span>
 											}
 										</td>
-										<td width="5%">
+										<td width="10%">
 											<div class="d-inline position-relative">
 												<a href="#" role="button" id="recordOptions" data-bs-toggle="dropdown" aria-expanded="false">
 													<i class="bi bi-three-dots-vertical"></i>
