--- a/Pages/disaster/profile/entrylog/Index.cshtml
+++ b/Pages/disaster/profile/entrylog/Index.cshtml
@@ -136,8 +136,9 @@
 										</div>
 									</th>
 									<th>Name</th>
-									<th>Check-in Date</th>
-									<th>Check-out Date</th>
+									<th style="text-align: center;">Remarks</th>
+									<th style="text-align: center;">Check-in Date</th>
+									<th style="text-align: center;">Check-out Date</th>
 									<th style="text-align: center;">Status</th>
 									<th></th>
 								</tr>
@@ -154,6 +155,7 @@
 											</div>
 										</td>
 										<td width="30%">@item.fullName</td>
+										<td width="15%">@item.remarks</td>
 										<td width="20%" style="text-align: center;">@item.checkInDate</td>
 										<td width="20%" style="text-align: center;">@item.checkOutDate</td>
 										<td width="15%" style="text-align: center;">
@@ -267,15 +269,15 @@
 		var table = $('#entrylog-table').DataTable({
 			responsive: true,
 			columnDefs: [
-				{ "orderable": true, "targets": [1, 2, 3] }, // Sortable columns
-				{ "orderable": false, "targets": [0, 4, 5] } // Non-sortable columns
+				{ "orderable": true, "targets": [1, 3, 4] }, // Sortable columns
+				{ "orderable": false, "targets": [0, 2, 5, 6] } // Non-sortable columns
 			],
 			// Set initial sorting by the Check-in Date
-			order: [[2, 'desc'], [1, 'asc']]
+			order: [[3, 'asc']]
 		});
 
 		// Adding filters to specific columns
-		table.columns([4]).every(function () {
+		table.columns([2, 5]).every(function () {
 			var column = this;
 			var select = $('<select><option value=""></option></select>')
 				.appendTo($(column.header()))
@@ -291,7 +293,7 @@
 
 			column.data().unique().sort().each(function (d, j) {
 				// Only add the options "Check-in" and "Check-out" for the "Status" column
-				if (column.index() === 4) {
+				if (column.index() === 5) {
 					// Set specific filter options only if they haven't been added
 					if (select.find("option[value='Check-in']").length == 0) {
 						select.append('<option value="Check-in">Check-in</option>');
