evacuation center title

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -71,13 +71,12 @@
             </div>
 
 
-            <div class="content">
-                <!-- Title and Allocate Button-->
-                    <div class="col d-flex align-items-center">
-                         <div class="ec-title">
-                            <h2 class="ec-subtitle">Evacuation Center</h2>
-                         </div>
+            <div class="container form-container1">
+	            <div class="container form-container-content1">
+                    <div>
+                        <h1>Evacuation Center</h1>
                     </div>
+	            </div>
 
                 <!-- Table -->
                 <div class="row p-2">
