Added pictures for about-us.

--- a/Pages/About.cshtml
+++ b/Pages/About.cshtml
@@ -43,25 +43,25 @@
             <div>
                 <h3>Meet the Team</h3>
 
-                <div class="row g-3">
+                <div class="row g-3 p-5 text-center">
                     <div class="col-md-6">
                         <img src="/tagala.jpg" alt="Agatha Gwen Tagala" class="bd-placeholder-img rounded-circle" width="140" height="140">
-                        <h4>Agatha Gwen Tagala</h4>
+                        <h5 class="pt-2">Agatha Gwen Tagala</h5>
                     </div>
 
                     <div class="col-md-6">
-                        <img src="/guzon.jpg" alt="Jeanne Margaret Guzon" class="bd-placeholder-img rounded-circle" width="140" height="140">
-                        <h4>Jeanne Margaret Guzon</h4>
+                        <img src="/guzon.png" alt="Jeanne Margaret Guzon" class="bd-placeholder-img rounded-circle" width="140" height="140">
+                        <h5 class="pt-2">Jeanne Margaret Guzon</h5>
                     </div>
 
                     <div class="col-md-6">
                         <img src="/bartolome.jpg" alt="Ian Vincent Bartolome" class="bd-placeholder-img rounded-circle" width="140" height="140">
-                        <h4>Ian Vincent Bartolome</h4>
+                        <h5 class="pt-2">Ian Vincent Bartolome</h5>
                     </div>
 
                     <div class="col-md-6">
                         <img src="/sudaria.jpg" alt="Patrick Sudaria" class="bd-placeholder-img rounded-circle" width="140" height="140">
-                        <h4>Patrick Sudaria</h4>
+                        <h5 class="pt-2">Patrick Sudaria</h5>
                     </div>
                 </div>
             </div>  
