Removed home title

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -16,7 +16,7 @@
         <!--MAIN-->
             <div class="head-title">
                 <div>
-                    <h2>Home</h2>
+                    @*<h2>Home</h2>*@
                     <h3 class="sub-title">Hello, Welcome to Agapay Aid</h3>
                 </div>
             </div>
